<resources>
    <string name="app_name">Game#Ten</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="max_priority">Max Priority</string>
    <string name="high_priority">High priority</string>
    <string name="default_priority">Default priority</string>
    <string name="low_priority">Low priority</string>
    <string name="min_priority">Min priority</string>
    <string name="random_priority">Random priority</string>
    <string name="big_text">Big Text</string>
    <string name="title">Android Notification</string>
    <string name="old">Old Notification</string>
    <string name="big_picture">Big Picture</string>
    <string name="inbox_type">Inbox Type</string>
    <string name="summary_text">sjodfksdfnakd,skdjflskdfjslkdfja;dflkjasldkf
    lskdjflskdfjlaksdjflskjdflaksndf
    sdkfhnksdnfsalfdjslkjwo \n
    ksdfnaoskdlf,saodlfj</string>

</resources>
