<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"></FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="top|center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTitle"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnMaxPriorityNotification"
                android:layout_marginTop="30sp"
                android:text="@string/max_priority"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnHighPriorityNotification"
                android:layout_marginTop="30sp"
                android:text="@string/high_priority"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnLowPriorityNotification"
                android:layout_marginTop="30sp"
                android:text="@string/low_priority"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnMinPriorityNotification"
                android:layout_marginTop="30sp"
                android:text="@string/min_priority"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnDefaultNotification"
                android:layout_marginTop="30sp"
                android:text="@string/default_priority"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnOldTypeNotification"
                android:layout_marginTop="30sp"
                android:text="@string/old"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnBigTextNotification"
                android:layout_marginTop="30sp"
                android:text="@string/big_text"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnBigImageNotification"
                android:layout_marginTop="30sp"
                android:text="@string/big_picture"/>
            <Button
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:id="@+id/btnInboxTypeNotification"
                android:layout_marginTop="30sp"
                android:text="@string/inbox_type"/>
        </LinearLayout>
    </ScrollView>
    <!--
    <fragment
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.androidatc.notifications.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer"></fragment>
        -->


</android.support.v4.widget.DrawerLayout>
